--- a/ProjectAsteroids/ProjectAsteroids.vcxproj.filters
+++ b/ProjectAsteroids/ProjectAsteroids.vcxproj.filters
@@ -80,5 +80,8 @@
     <ClInclude Include="EnemyMgr.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
+    <ClInclude Include="Cannon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
