--- a/ProjectAsteroids/ProjectAsteroids.vcxproj
+++ b/ProjectAsteroids/ProjectAsteroids.vcxproj
@@ -117,6 +117,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Asteroid.cpp" />
