--- a/ProjectAsteroids/ProjectAsteroids.vcxproj.filters
+++ b/ProjectAsteroids/ProjectAsteroids.vcxproj.filters
@@ -22,6 +22,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Launch.cpp">
